test-suite/output/ErrorLocation_tac_in_term_2.v
Ltac f x y := apply (x y).

Goal True.
apply ltac:(f S true).
Abort.
